2008-03-24  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for XMEGA, ATxmega128A1, ATxmega64A1.
	* crt1/gcrt1.S: Ditto.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/common.h: Ditto.
	* include/avr/io.h: Ditto.
	* libc/stdlib/stdlib_private.h: Ditto.
	* include/avr/power.h: Ditto.
	* include/avr/sleep.h: Ditto.
	* include/avr/wdt.h: Ditto.
	* include/avr/iox128a1.h: New file.
	* include/avr/iox64a1.h: New file.
	* NEWS: Add news.

2008-03-24  Dmitry Xmelkov  <dmix@gmail.ru>

	Optimize setjmp() in space. Use __AVR_3_BYTE_PC__ macro.
	* include/setjmp.h: Reduce size of jmp_buf by 2/1 bytes.
	* libc/stdlib/setjmp.S: Reduce size of jmp_buf by 2/1 bytes. Rewrite
	the setjmp() to save flash. Use __AVR_3_BYTE_PC__ to determine the
	size of return address (vs EIND register presence). Add common
	assembler pseudos: .type, .size .
	* tests/simulate/regression/20080323-jmpbuf.c: New file.
	* tests/simulate/stdlib/setjmp-1.S: New file.
	* tests/simulate/stdlib/setjmp-2.S: New file.
	* tests/simulate/stdlib/setjmp-3.S: New file.
	* tests/simulate/stdlib/setjmp-4.S: New file.
	* tests/simulate/stdlib/setjmp-5.S: New file.
	* NEWS: Add setjmp() to optimize list.

2008-03-22  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATmega32U4.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/power.h: Ditto.
	* include/avr/wdt.h: Ditto.
	* include/avr/sleep.h: Reformat doxygen comment.
	* include/avr/iom32u4.h: New file.
	* NEWS: Add to new devices list.

2008-03-22  Dmitry Xmelkov  <dmix@gmail.ru>

	Add __unordsf2() function. GCC 4.3.0 uses it.
	* libm/fplib/unordsf2.S: New file.
	* libm/fplib/fp_cmp.S: Split to 3 separate files.
	* libm/fplib/cmpsf2.S: New file. It was a part of 'fp_cmp.S'.
	* libm/fplib/gesf2.S: (Ditto.)